- clean up documentation and navigation - add some more race stats - add tyre wear, ers deployment and warnings to the leaderboard